--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -88,12 +88,20 @@
 \maketitle
 \tableofcontents
 
+\input{requirements}
 \input{hardware}
+\input{schematic}
+\input{PCB}
 \input{software}
 \input{troubleshooting}
+\input{rework}
 \input{debugging}
+
 
 \appendix
 \input{openocd}
+\input{git}
+\input{assessment}
+
 
 \end{document}
