--- a/doc/guide/git.tex
+++ b/doc/guide/git.tex
@@ -22,10 +22,10 @@ of the dreaded merge conflict.
 \item Commit changes 
 
 \begin{minted}{bash}  
-    $ git commit -m ``Commit message''
+    $ git commit -m "Commit message"
 \end{minted}
 
-Note, you should commit about every 15 min, preferably when you have
+Note, you should commit at least every 15 min, preferably when you have
 made a single functional change.  Ideally each commit should be
 self-contained.
   
@@ -48,7 +48,7 @@ The diff command is useful to determine what changes you made.
 The status command says which files have been modified and what you
 should do, say when you get a merge conflict.
 
-The blame command is useful to determin who authored each line of code.
+The blame command is useful to determine who authored each line of code.
 
 The log command shows all the previous commit messages.
 
