--- a/doc/guide/debugging.tex
+++ b/doc/guide/debugging.tex
@@ -23,7 +23,7 @@ plugins.
 \program{GDB} allows you to inspect the CPU registers, memory, set
 breakpoints, set watchpoints, and much more.
 
-You can reset your program using the GDB `jump reset` command.
+You can reset your program using the GDB \code{jump reset} command.
 However, this does not reset the peripherals as with a power-on reset.
 
 The backtrace, \code{bt}, command is useful to show the function call
