--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -80,15 +80,16 @@
 \newcommand{\pin}[1]{\texttt{#1}}
 \newcommand{\sig}[1]{\texttt{#1}}
 
-\title{Mutley's Guide To The Wacky Racers, V.012E-3}
-\author{Michael Hayes and Ben Mitchell}
+\title{Mutley's Guide To The Wacky Racers, V.013E-3}
+\author{Michael Hayes}
 \date{2021}
 
 \begin{document}
 \maketitle
 \tableofcontents
 
-\input{requirements}
+%\input{requirements}
+\input{schedule}
 \input{hardware}
 \input{schematic}
 \input{PCB}
@@ -101,7 +102,7 @@
 \appendix
 \input{openocd}
 \input{git}
-\input{assessment}
+%\input{assessment}
 
 
 \end{document}
