--- a/doc/guide/openocd.tex
+++ b/doc/guide/openocd.tex
@@ -79,7 +79,7 @@ a Windows system.
 The developers of OpenOCD release source packages (and provide
 subversion access) but do not provide official builds for any
 operating system. However, there are various sites which provide
-prebuilt versions of OpenOCD.
+pre-built versions of OpenOCD.
 
 \subsection{Windows}
 \label{windows}
