--- a/doc/guide/software.tex
+++ b/doc/guide/software.tex
@@ -1,3 +1,4 @@
+\label{software}
 \chapter{Software}
 
 \section{Preparation}
@@ -46,7 +47,7 @@ for an Ubuntu or Mint distribution:
 $ sudo apt update && sudo apt upgrade}
 \end{minted}
 
-Install the compiler:
+Then, install the compiler:
 
 \begin{minted}{bash}
 $ sudo apt install gcc-arm-none-eabi
