--- a/doc/guide/schedule.tex
+++ b/doc/guide/schedule.tex
@@ -1,7 +1,7 @@
 \chapter{Schedule}
 
 \begin{description}
-\item [Term~1 week~1]\mbox{}\\
+\item [Week~1]\mbox{}\\
 
   \begin{itemize}
   \item Form a group of four and register your group on Learn.
@@ -10,7 +10,7 @@
   \item Peruse the datasheets of the key components.
   \end{itemize}
   
-\item [Term~1 week~2]\mbox{}\\
+\item [Week~2]\mbox{}\\
   
   \begin{itemize}
   \item Attend Altium schematic tutorial.
@@ -18,14 +18,14 @@
   \item Read suggestions in \hyperref[hardware]{hardware section}.
   \end{itemize}
   
-\item [Term~1 week~3]\mbox{}\\
+\item [Week~3]\mbox{}\\
   
   \begin{itemize}
   \item Submit you Altium schematic for review.
   \item Attend review feedback session.
   \end{itemize}
   
-\item [Term~1 week~4]\mbox{}\\
+\item [Week~4]\mbox{}\\
   
   \begin{itemize}
   \item Attend Altium PCB tutorial.
@@ -33,7 +33,7 @@
   \end{itemize}
   
   
-\item [Term~1 week~5]\mbox{}\\
+\item [Week~5]\mbox{}\\
   
   \begin{itemize}
   \item Attend SMT lab induction.
@@ -41,64 +41,58 @@
   \end{itemize}
   
   
-\item [Term~1 week~6]\mbox{}\\  
+\item [Week~6]\mbox{}\\  
   
   \begin{itemize}
   \item Submit PCB design (late round).
   \end{itemize}
   
   
-\item [Break week~1]\mbox{}\\
+\item [Week~7]\mbox{}\\
   
   
-\item [Break week~2]\mbox{}\\  
+\item [Week~8]\mbox{}\\  
   
-  \begin{itemize}
-  \item Populate and test PCB.
-  \end{itemize}
-  
-  
-\item [Break week~3]\mbox{}\\
+\item [Week~9]\mbox{}\\
   
   \begin{itemize}
   \item Populate and test PCB.
   \end{itemize}  
   
   
-\item [Term~2 week~1]\mbox{}\\
-  
+\item [Week~10]\mbox{}\\
+
   \begin{itemize}
+  \item Populate and test PCB.
   \item Demonstrate blinky program.
   \end{itemize}
-  
-  
-\item [Term~2 week~2]\mbox{}\\
+
+\item [Week~11]\mbox{}\\  
+
+  \begin{itemize}
+  \item Demonstrate blinky program.
+  \end{itemize}  
+ 
+\item [Week~12]\mbox{}\\
   
   \begin{itemize}
   \item Demonstrate IMU/motors functionality.
   \end{itemize}
   
-  
-\item [Term~2 week~3]\mbox{}\\
-  
-  \begin{itemize}
-  \item Demonstrate IMU/motors functionality.
-  \end{itemize}
-  
-\item [Term~2 week~4]\mbox{}\\  
+\item [Week~13]\mbox{}\\  
   
   \begin{itemize}
   \item Demonstrate radio control.
   \end{itemize}  
   
-\item [Term~2 week~5]\mbox{}\\
+\item [Week~14]\mbox{}\\
   
   \begin{itemize}
   \item Demonstrate full functionality.
   \item Plan your costumes!
   \end{itemize}
   
-\item [Term~2 week~25]\mbox{}\\
+\item [Week~15]\mbox{}\\
   
   \begin{itemize}
   \item Practice control of you wacky racer.
